fix(calloutwithquote): updated with spacing tokens

--- a/packages/styles/scss/patterns/sub-patterns/quote/_quote.scss
+++ b/packages/styles/scss/patterns/sub-patterns/quote/_quote.scss
@@ -11,17 +11,17 @@
 
 @mixin quote {
   .#{$prefix}--quote {
-    padding-bottom: 2rem;
+    padding-bottom: $layout-03;
     &__container {
       @include carbon--make-row;
     }
 
     &__wrapper {
       @include carbon--breakpoint(sm) {
-        padding-top: 2rem;
+        padding-top: $layout-03;
       }
       @include carbon--breakpoint(md) {
-        padding-top: 4rem;
+        padding-top: $layout-05;
       }
 
       position: relative;
